# flyline

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  docker-bake.hcl  install.sh
.github/DISCUSSION_TEMPLATE/: q-a.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/prompts/: docs-check.prompt.md
.github/workflows/: ci.yml  generate-demos.yml  release.yml  update-settings-docs.yml
docker/: builder.Dockerfile  bwrap  claude  demo_auto_tab_completion.Dockerfile  demo_base.Dockerfile  demo_flycomp.Dockerfile  demo_ls_colors.Dockerfile  install_test_alpine.Dockerfile  install_test_bash_3.2.57.Dockerfile  install_test_ubuntu.Dockerfile  install_test_zsh.Dockerfile
examples/: agent_mode.sh
flycomp/: Cargo.toml
flycomp/src/: lib.rs  main.rs  parse_help.rs  parse_man.rs
scripts/: flyline.zsh
src/: active_suggestions.rs  bash_funcs.rs  bash_symbols.rs  changelog.rs  cli.rs  command_acceptance.rs  content_builder.rs  content_utils.rs  cursor.rs  dparser.rs  history.rs  hostnames.rs  lib.rs  logging.rs  mouse_state.rs  prompt_manager.rs  settings.rs  tab_completion_context.rs  text_buffer.rs  threads.rs  tutorial.rs
src/app/: actions.rs  auto_close.rs  formatted_buffer.rs  mod.rs  tab_completion.rs  ui.rs
src/shell/: mod.rs  zsh.rs  zsh_comp_daemon.zsh
tapes/: demo_agent_mode.tape  demo_auto_tab_completion.tape  demo_flycomp.tape  demo_overview.tape  demo_settings.tape
tests/man_pages/: apt.8  cat.1  chmod.1  chown.1  cp.1  docker.1  gh.1  git.1  go.1  ip.8  ls.1  mkdir.1  mv.1  npm.1  ping.8  pip.1  rm.1  sed.1  ssh.1  sudo.8  systemctl.1  (+1 more)
(+35 files in other folders)
